--- a/code/WebApp/WebApp/Components/PriceChart.razor
+++ b/code/WebApp/WebApp/Components/PriceChart.razor
@@ -23,7 +23,12 @@
                     data: data,
                     backgroundColor: 'rgba(255, 99, 132, 0.2)',
                     borderColor: 'rgba(255, 99, 132, 1)',
-                    borderWidth: 1
+                    borderWidth: 1,
+                    trendlineLinear: {
+                        style: "rgba(255,105,180, .8)",
+                        lineStyle: "solid",
+                        width: 2
+                    }
                 }]
             },
             options: {
@@ -42,7 +47,9 @@
                         }
                     }
                 },
-
+                plugins: {
+                    trendlineLinear: true
+                }
             }
         });
     };
@@ -58,7 +65,6 @@
             console.error('An error occurred in updatePriceChart function:', error);
         }
     }
-
 </script>
 
 @code {
