feat: added color to trendline and also made it dotted

--- a/code/WebApp/WebApp/Components/PriceChart.razor
+++ b/code/WebApp/WebApp/Components/PriceChart.razor
@@ -25,9 +25,10 @@
                     borderColor: 'rgba(255, 99, 132, 1)',
                     borderWidth: 1,
                     trendlineLinear: {
-                        style: "rgba(255,105,180, .8)",
-                        lineStyle: "solid",
-                        width: 2
+                        colorMin: "red",
+                        colorMax: "green",
+                        lineStyle: "dotted",
+                        width: 3
                     }
                 }]
             },
