feat: added new Component for buy and sell cryptocurrencies at marketprice. still need correct implementation

--- a/code/WebApp/WebApp/Components/_Imports.razor
+++ b/code/WebApp/WebApp/Components/_Imports.razor
@@ -10,4 +10,5 @@
 @using WebApp.Components
 @using Microsoft.AspNetCore.Components.Authorization
 @using Models.Entities
+@using WebApp.Models.ViewModels;
 @using Services
