--- a/code/WebApp/WebApp/Components/BuySellAtMarketpriceModal.razor
+++ b/code/WebApp/WebApp/Components/BuySellAtMarketpriceModal.razor
@@ -1,83 +1,109 @@
 ﻿@rendermode InteractiveServer
 @inject TransactionService transactionService
 
-<div class="modal fade" id="BuySellMarketPriceModal" tabindex="-1" aria-labelledby="BuySellMarketPriceModal" aria-hidden="true">
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ConvertCryptoModal">
+    Buy/Sell at Market Price
+</button>
+
+<div class="modal fade" id="ConvertCryptoModal" tabindex="-1" aria-labelledby="ConvertCryptoModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="BuySellMarketPriceModalLabel">Buy Sell Cryptocurrency</h1>
+                <h1 class="modal-title fs-5" id="ConvertCryptoModalLabel">Convert Cryptocurrency</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <EditForm Model="@transaction" OnValidSubmit="AddTransaction" FormName="AddTransaction">
-                <DataAnnotationsValidator />
-                <div class="modal-body">
-                    <ul class="nav nav-pills nav-fill">
-                        <li class="nav-item">
-                            <button type="button" class="nav-link @(transactionType == "Buy" ? "active" : "")" aria-current="page" @onclick='(() => selectTransactionType("Buy"))'>Buy</button>
-                        </li>
-                        <li class="nav-item">
-                            <button type="button" class="nav-link @(transactionType == "Sell" ? "active" : "")" @onclick='(() => selectTransactionType("Sell"))'>Sell</button>
-                        </li>
-                    </ul>
+            <EditForm Model="@transaction" FormName="AddTransaction">
+            <div class="modal-body">
+                <ul class="nav nav-pills nav-fill">
+                    <li class="nav-item">
+                        <button type="button" class="nav-link @(transactionType == "Buy" ? "active" : "")" @onclick='(() => selectTransactionType("Buy"))'>Buy</button>
+                    </li>
+                    <li class="nav-item">
+                        <button type="button" class="nav-link @(transactionType == "Sell" ? "active" : "")" @onclick='(() => selectTransactionType("Sell"))'>Sell</button>
+                    </li>
+                </ul>
 
-                    <div class="mt-4">
-                        <label>Select Cryptocurrency</label>
-                        <InputSelect @bind-Value="transaction.SelectedCryptocurrency" class="form-select mt-1" id="selectCryptocurrency">
-                            <option value="" disabled selected>Select a cryptocurrency</option>
-                            @foreach (var crypto in cryptocurrencies)
-                            {
-                                <option value="@crypto">@crypto</option>
-                            }
-                        </InputSelect>
-                        <ValidationMessage For="() => transaction.SelectedCryptocurrency" />
+                <div class="mt-4">
+                    <label>Select Cryptocurrency</label>
+                    <InputSelect @bind-Value="transaction.SelectedCryptocurrency" class="form-select mt-1">
+                        <option value="" disabled selected>Select a cryptocurrency</option>
+                        @foreach (var crypto in cryptocurrencies)
+                        {
+                            <option value="@crypto">@crypto</option>
+                        }
+                    </InputSelect>
+                    <ValidationMessage For="() => transaction.SelectedCryptocurrency" />
+                </div>
+                    @{
+                        var currentPrice = coinPrices.FirstOrDefault(sp => sp.PartitionKey == transaction.SelectedCryptocurrency)?.price ?? 0.0;
+                        exchangeRate = Math.Round(1 / currentPrice,7);
+                    }
+
+                <div class="mt-3 row">
+                    <div class="col">
+                        <label>Amount in EUR</label>
+                        <InputNumber @bind-Value="transaction.PricePaidAll" class="form-control mt-1" />
+                        <ValidationMessage For="() => transaction.PricePaidAll" />
                     </div>
 
-                    <div class="mt-3">
-                        <label>Amount</label>
-                        <InputNumber @bind-Value="transaction.Amount" class="form-control mt-1" id="amount" oninput="calculatePricePaidAllOrAveragePrice()" />
+                    <div class="col">
+                        <label>Amount in Crypto</label>
+                        <InputNumber @bind-Value="transaction.Amount" class="form-control mt-1" />
                         <ValidationMessage For="() => transaction.Amount" />
                     </div>
-
-                    <div class="mt-3 row">
-                        <div class="col">
-                            <label>Average Price</label>
-                            <InputNumber @bind-Value="transaction.AveragePrice" class="form-control mt-1" id="averagePrice" oninput="calculatePricePaidAll()" />
-                            <ValidationMessage For="() => transaction.AveragePrice" />
-                        </div>
-
-                        <div class="col">
-                            <label>Price Paid All</label>
-                            <InputNumber @bind-Value="transaction.PricePaidAll" class="form-control mt-1" id="pricePaidAll" oninput="calculateAveragePrice()" />
-                            <ValidationMessage For="() => transaction.PricePaidAll" />
-                        </div>
-                    </div>
-
-                    <div class="mt-3">
-                        <label>Transaction Date</label>
-                        <InputDate @bind-Value="transaction.TransactionDate" class="form-control mt-1" id="transactionDate" />
-                        <ValidationMessage For="() => transaction.TransactionDate" />
-                    </div>
-
-                    <div class="mt-3 text-center">
-                        <span class="text-danger">@errorMessage</span>
-                    </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+
+                <div class="mt-3">
+                    <label>Exchange Rate</label>
+                    <p>1 EUR = @exchangeRate @transaction.SelectedCryptocurrency</p>
                 </div>
+            </div>
             </EditForm>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary @(string.IsNullOrWhiteSpace(transaction.SelectedCryptocurrency) ? "disabled" : "")" data-bs-target="#ConfirmConversionModal" data-bs-toggle="modal" @onclick="TransformTransaction">Convert</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="ConfirmConversionModal" tabindex="-1" aria-labelledby="ConfirmConversionModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="ConfirmConversionModalLabel">Confirm Conversion</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Amount in EUR: @transaction.PricePaidAll</p>
+                <p>Amount in @transaction.SelectedCryptocurrency: @transaction.Amount</p>
+                <p>Exchange Rate: 1 EUR = @exchangeRate @transaction.SelectedCryptocurrency</p>
+                <p>You will receive: @transaction.Amount @transaction.SelectedCryptocurrency</p>
+                <div class="mt-3 text-center">
+                    <span class="text-danger">@errorMessage</span>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary @(string.IsNullOrWhiteSpace(errorMessage) ? "" : "disabled")" @onclick="AddTransaction">Confirm Conversion</button>
+            </div>
         </div>
     </div>
 </div>
 
 
+
 @code {
+    private double exchangeRate = 0.0;
+
     [SupplyParameterFromForm]
     public TransactionModel transaction { get; set; } = new();
 
     [Parameter]
-    public List<WalletEntry> walletEntries { get; set; } = new List<WalletEntry>();
+    public List<CoinPrice> coinPrices { get; set; } = new();
+
+    [Parameter]
+    public List<WalletEntry> walletEntries { get; set; } = new();
 
     [Parameter]
     public string selectedWallet { get; set; } = "";
@@ -85,6 +111,7 @@
     [Parameter]
     public string username { get; set; } = "";
 
+    [Parameter]
     public List<string> cryptocurrencies { get; set; } = new();
 
     private string? errorMessage;
@@ -94,6 +121,23 @@
 
     private async Task AddTransaction()
     {
+
+        transaction.TransactionDate = DateTime.Now;
+
+        await transactionService.CreateTransactionAsync(username, transaction.SelectedCryptocurrency, transaction.Amount, transaction.PricePaidAll, DateTimeOffset.UtcNow, transactionType, selectedWallet);
+
+
+        await TransactionAdded.InvokeAsync("#ConfirmConversionModal");
+
+        transaction = new TransactionModel();
+    }
+
+    private void TransformTransaction()
+    {
+        transaction.AveragePrice = coinPrices.Where(sp => sp.PartitionKey == transaction.SelectedCryptocurrency).Select(sp => sp.price).FirstOrDefault();
+        transaction.TransactionDate = DateTime.Now;
+        transaction.Amount = Math.Round(transaction.PricePaidAll / transaction.AveragePrice, 7);
+
         var walletEntry = walletEntries.FirstOrDefault(sp => sp.Name == transaction.SelectedCryptocurrency);
         if (walletEntry == null && transactionType == "Sell")
         {
@@ -110,14 +154,9 @@
             errorMessage = "Please select a wallet";
             return;
         }
-
-        await transactionService.CreateTransactionAsync(username, transaction.SelectedCryptocurrency, transaction.Amount, transaction.PricePaidAll, DateTimeOffset.UtcNow, transactionType, selectedWallet);
-
-        
-        //await CloseModalAsync("#transactionModal");
-
-        transaction = new TransactionModel();
     }
+
+    [Parameter] public EventCallback<string> TransactionAdded { get; set; }
 
     private void selectTransactionType(string type)
     {
