--- a/code/WebApp/WebApp/Components/DoughnutChart.razor
+++ b/code/WebApp/WebApp/Components/DoughnutChart.razor
@@ -136,5 +136,5 @@
     [Parameter]
     public string Height { get; set; } = "50vh";
 
-    [Parameter] public List<KeyValuePair<string, double>> DataList { get; set; }
+    [Parameter] public List<KeyValuePair<string, double>> DataList { get; set; } = new();
 }
